# pict2png

./: .gitignore  CMakeLists.txt  README.md  binfile.c  binfile.h  log.c  log.h  main.c  quickimagedraw.c  quickimagedraw.h  termcolour.h
doc/: packbits.doc
